package edu.hitsz.Listener;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.bullet.BaseBullet;

import java.util.List;

public interface BoomListener {
	void BoomActivate();
}
